# contacts-book-rest-api

./: README.md  pyproject.toml  pyproject2.toml  test.db
docs/: conf.py
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
postgres-data/base/1/: 1259  2619  2619_vm  2696  pg_internal.init
postgres-data/base/5/: 1247  1249  1249_fsm  1259  16389  16390  16395  16397  16398  16401  16403  16405  16406  16409  16411  16415  16417  16419  16431  16433  16437  16439  16445  16452  16497  16503  16504  16516  16526  16532  16621  16622  16623  16636  16647  16651  16653  2224  2579  2604  (+31 more)
postgres-data/global/: 1260  1262  2671  pg_control  pg_internal.init
postgres-data/pg_stat/: pgstat.stat
src/conf/: config.py
src/database/: models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/services/: auth.py  email.py  roles.py
tests/: conftest.py  test_e2e_auth.py  test_unit_repository_contacts.py
